CCD-1592 Integrate Fortify Scan into Nightly Pipelines - Definition Store